Error fixed in group portion of final exam

--- a/index.html
+++ b/index.html
@@ -441,7 +441,9 @@ Phone: (406) 994-6875</p>
 </div>
 <div id="final-exam-20" class="section level3">
 <h3>Final exam (20%)</h3>
-<p>The group final exam will be taken in class during your normal in-class time. A practice exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L. #### <em>Group portion</em>:</p>
+<p>The group final exam will be taken in class during your normal in-class time. A practice exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.</p>
+<div id="group-portion-1" class="section level4">
+<h4><em>Group portion</em>:</h4>
 <p>Group final exam will be <strong>December 10th (during normal class time)</strong>.</p>
 <ul>
 <li>The group portion of the final exam will be worth 20% of your exam grade.</li>
@@ -449,6 +451,7 @@ Phone: (406) 994-6875</p>
 <li>You will be allowed a calculator on the group final exam.</li>
 <li>You <strong>will</strong> be required to use Rstudio on the group final exam.</li>
 </ul>
+</div>
 <div id="individual-portion-1" class="section level4">
 <h4><em>Individual portion</em>:</h4>
 <p>Individual final exam will be <strong>December 16th, 6 - 7:50pm</strong></p>
