updated attendance policies

--- a/index.html
+++ b/index.html
@@ -1772,12 +1772,23 @@ device, please speak to your instructor, and he or she will provide you
 with a PDF copy of the coursepack.</strong></li>
 <li>Activities will be checked for completion at the <strong>beginning
 of the following class period</strong>.</li>
-<li>If you have an excused absence the day the activity is due (e.g.,
-quarantine or ill), you may email your section instructor a scanned copy
-of the completed activity for credit. This must be received by
-<strong>8pm Mountain Time on the day the activity would be checked in
-class</strong>.</li>
-<li>The lowest activity grade will be dropped.</li>
+<li>Policy for missed activities:
+<ul>
+<li>We will not record or post lectures/asynchronous learning
+opportunities.</li>
+<li>Students get a “free pass” for up to three activities per Unit, no
+questions asked. Illnesses/emergencies/school-related absences are
+included in these three; if students have extraneous circumstances, they
+are encouraged to talk to their instructor.</li>
+<li>For illnesses or when students cannot attend class, we recommend
+that the student WebEx into class with their group (or any video
+conferencing tool of choice). Students attending class remotely can show
+their activity via WebEx for credit.</li>
+<li>WebEx should be set up by students’ teammates. If the student is
+uncomfortable asking, the instructor can facilitate that conversation
+(e.g., email the students’ teammates, cc’ing the student, and ask if
+anyone can setup a WebEx meeting for class).</li>
+</ul></li>
 </ul>
 </div>
 <div id="labs-15" class="section level3">
@@ -1819,8 +1830,8 @@ exam. Further details, resources, and instructions for each exam will be
 posted the week prior to the exam in D2L.</p>
 <div id="group-portion" class="section level4">
 <h4><em>Group portion</em>:</h4>
-<p>Group midterm exam 1 will be <strong>February 16th</strong>; Group
-midterm exam 2 will be <strong>March 30th</strong>.</p>
+<p>Group midterm exam 1 will be <strong>September 21st</strong>; Group
+midterm exam 2 will be <strong>October 26th</strong>.</p>
 <ul>
 <li>Group portions of the midterms are worth 20% of your midterm exam
 grade.</li>
@@ -1828,15 +1839,14 @@ grade.</li>
 <li>You will be allowed a calculator on the group midterm exams.</li>
 <li>You <strong>will</strong> be required to use Rstudio on the group
 midterm exams.</li>
-<li><strong>If you miss more than 33% of class days within a unit
-without communicating with your section instructor and group-mates, you
-must complete the group exam individually.</strong></li>
+<li><strong>If you miss more than 3 class days within a unit, you must
+complete the group exam individually.</strong></li>
 </ul>
 </div>
 <div id="individual-portion" class="section level4">
 <h4><em>Individual portion</em>:</h4>
-<p>Individual midterm exam 1 will be <strong>February 18th</strong>;
-Individual midterm exam 2 will be <strong>April 1st</strong>.</p>
+<p>Individual midterm exam 1 will be <strong>September 23rd</strong>;
+Individual midterm exam 2 will be <strong>October 28th</strong>.</p>
 <ul>
 <li>Individual portions of the midterms will be worth 80% of your
 midterm exam grade.</li>
@@ -1858,13 +1868,17 @@ individual midterm exams.</li>
 <div id="final-exam-20" class="section level3">
 <h3>Final exam (20%)</h3>
 <p>The group final exam will be taken in class during your normal
-in-class time. A practice exam will be released in D2L one week prior to
+in-class time on the final Wednesday and Friday of classes (prior to
+Finals week). A practice exam will be released in D2L one week prior to
 the exam, with solutions to the practice exam released in D2L the Sunday
 prior to the exam. Further details, resources, and instructions for each
 exam will be posted the week prior to the exam in D2L.</p>
+<p>The individual final exam is a common hour exam. <strong>Understand
+that attending that common hour exam is part of your commitment when you
+enroll in the course.</strong></p>
 <div id="group-portion-1" class="section level4">
 <h4><em>Group portion</em>:</h4>
-<p>Group final exam will be <strong>May 4th AND May 6th (during normal
+<p>Group final exam will be <strong>December 7th and 9th (during normal
 class time)</strong>.</p>
 <ul>
 <li>The group portion of the final exam will be worth 20% of your exam
@@ -1873,15 +1887,14 @@ grade.</li>
 <li>You will be allowed a calculator on the group final exam.</li>
 <li>You <strong>will</strong> be required to use Rstudio on the group
 final exam.</li>
-<li><strong>If you miss more than 33% of class days in Unit 3 without
-communicating with your section instructor and group-mates, you must
+<li><strong>If you miss more than 3 class days in Unit 3, you must
 complete the group exam individually.</strong></li>
 </ul>
 </div>
 <div id="individual-portion-1" class="section level4">
 <h4><em>Individual portion</em>:</h4>
-<p>Individual final exam will be <strong>Thursday, May 12 from 12:00 -
-1:50pm</strong>.</p>
+<p>Individual common hour final exam will be <strong>Tuesday, December
+13th from 6:00 - 7:50pm</strong>.</p>
 <ul>
 <li>The individual portion of the final exam will be worth 80% of your
 exam grade.</li>
@@ -1892,6 +1905,8 @@ You will also be provided a one page formula sheet during the exam.</li>
 <li>You will be allowed a calculator on the individual final exam.</li>
 <li>You will <strong>not</strong> be required to use Rstudio on the
 individual final exams.</li>
+<li>Understand that attending that common hour exam is part of your
+commitment when you enroll in the course.</li>
 </ul>
 </div>
 </div>
@@ -1957,32 +1972,36 @@ semester based on student performance (never upward).</p>
 <div id="late-work-policies" class="section level1">
 <h1>Late work policies</h1>
 <ul>
-<li><p><strong>Videos</strong>: You may take the in-video quizzes as
-many times as you like up until the due date — the most recent quiz
-score will be the recorded grade for that video in D2L. Videos are
-available in D2L at least one week prior to the due date, so extensions
-on these quizzes are not given unless extenuating circumstances that
-prevent the student from viewing the video for that entire
-period.</p></li>
+<li><p><strong>Videos</strong>: You may take the video quizzes in
+Gradescope as many times as you like up until the due date using the
+Resubmit button to re-open a quiz. Videos are available in D2L at least
+one week prior to the due date, so extensions on these quizzes are not
+given unless extenuating circumstances that prevent the student from
+viewing the video for that entire period.</p></li>
 <li><p><strong>Activities and Labs</strong>: Attendance in this course
 is critical for success and is therefore required. The in-class activity
 and lab grades are a proxy for attendance and engagement. Students are
 expected to be in class during in-class activities and labs to provide
 support to each other and their teammates while working through the
-material. If you need to miss a class period due to illness, quarantine,
-or other extenuating circumstances, please email your section instructor
-a picture or scan of your completed activity due that day by 8pm
-Mountain Time, and we can give you credit for your completed activity.
-If the activity is not received by 8pm Mountain Time on the day it is
-due, you will not receive credit unless extenuating circumstances that
-prevented you from completing the activity for the entire week prior to
-the due date. If you need to miss a lab due to illness, quarantine, or
-other extenuating circumstances, please email your section instructor
-and group-mates letting them know <strong>prior to the lab
-meeting</strong>. You may participate in the lab via video conferencing
-if desired or you may complete the lab on your own. If the latter, your
-section instructor will determine an appropriate extension on the lab
-based on your individual circumstances.</p></li>
+material. We will not record or post lectures/asynchronous learning
+opportunities. Students get a “free pass” for up to three activities per
+Unit, no questions asked. Illnesses/emergencies/school-related absences
+are included in these three; if students have extraneous circumstances,
+they are encouraged to talk to their instructor. For illnesses or when
+students cannot attend class, we recommend that the student WebEx into
+class with their group (or any video conferencing tool of choice).
+Students attending class remotely can show their activity via WebEx for
+credit. WebEx should be set up by students’ teammates. If the student is
+uncomfortable asking, the instructor can facilitate that conversation
+(e.g., email the students’ teammates, cc’ing the student, and ask if
+anyone can setup a WebEx meeting for class). If you need to miss a lab
+due to illness, quarantine, or other extenuating circumstances, please
+email your section instructor and group-mates letting them know
+<strong>prior to the lab meeting</strong>. You may participate in the
+lab via video conferencing if desired or you may complete the lab on
+your own. If the latter, your section instructor will determine an
+appropriate extension on the lab based on your individual
+circumstances.</p></li>
 <li><p><strong>Exams</strong>:</p>
 <ul>
 <li>Students that are in quarantine but healthy enough to take the exam
