Highlight misconduct sentence

--- a/index.html
+++ b/index.html
@@ -2096,14 +2096,15 @@ due date. In addition, you can work with an MSU Writing Center tutor at
 any point in your writing process, including when you are integrating or
 citing sources. You can make an appointment and find citation resources
 at www.montana.edu/writingcenter.</p>
-<p><strong>In STAT 216, assignments that include the same wording as
-another student, regardless of whether that student was cited in your
-sources, will be considered plagiarism and will be treated as such.
-Students involved in plagiarism on assignments (all parties involved)
-will receive a zero grade on that assignment. The second offense will
-result in a zero on that assignment, and the incident will be reported
-to the Dean of Students. Academic misconduct on an exam will result in a
-zero on that exam and will be reported to the Dean of Students, without
+<p><strong><mark style="background-color: lightblue"> In STAT 216,
+assignments that include the same wording as another student, regardless
+of whether that student was cited in your sources, will be considered
+plagiarism and will be treated as such.</mark> Students involved in
+plagiarism on assignments (all parties involved) will receive a zero
+grade on that assignment. The second offense will result in a zero on
+that assignment, and the incident will be reported to the Dean of
+Students. Academic misconduct on an exam will result in a zero on that
+exam and will be reported to the Dean of Students, without
 exception.</strong></p>
 <p><a href="https://www.montana.edu/deanofstudents/academicmisconduct/academicmisconduct.html">More
 information about Academic Misconduct from the Dean of Students</a></p>
