--- a/index.html
+++ b/index.html
@@ -1772,7 +1772,7 @@ the missed lecture, you will receive access to a set of videos covering
 the lecture material which can be used to complete the lecture
 quiz.</li>
 </ul></li>
-<li>Lecture quizzes are due <strong>Sunday at 9pm Mountain Time each
+<li>Lecture quizzes are due <strong>Tuesday at 9pm Mountain Time each
 week</strong>.</li>
 <li>The lowest lecture grade will be dropped.</li>
 </ul>
@@ -1848,7 +1848,7 @@ week, covering the previous week’s content</strong>.</li>
 <h3>Midterm exams (40%)</h3>
 <p>There will be two midterm exams (worth 20% of the course grade each).
 Midterm exams will be taken in class during your normal in-class time.
-Each exam has an group (Wednesday) and individual (Friday) component. A
+Each exam has a group (Wednesday) and individual (Friday) component. A
 practice exam will be released in D2L two weeks prior to the exam, with
 solutions to the practice exam released in D2L one week prior to the
 exam. Further details, resources, and instructions for each exam will be
@@ -1973,17 +1973,13 @@ scale.</p>
 </tr>
 <tr class="odd">
 <td>C</td>
-<td>73-76.99%</td>
+<td>70-76.99%</td>
 </tr>
 <tr class="even">
-<td>C-</td>
-<td>70-72.99%</td>
-</tr>
-<tr class="odd">
 <td>D</td>
 <td>60-69.99%</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>F</td>
 <td>&lt;59.99%</td>
 </tr>
