--- a/index.html
+++ b/index.html
@@ -2042,11 +2042,8 @@ to the exam will receive a zero on the exam.</li>
 </div>
 <div id="covid-19-policies-and-health-related-class-absences" class="section level1">
 <h1>COVID-19 policies and health-related class absences</h1>
-<p>Montana State University strongly recommends students, faculty and
-staff wear face masks in indoor public spaces, in accordance with the
-Centers for Disease Control recommendations. Montana State University
-encourages students, faculty and staff to take advantage of convenient,
-on-campus clinics for the COVID-19 vaccine.</p>
+<p>Face masks are recommended, but not required, for students, faculty
+and staff indoors on campus.</p>
 <p>Please evaluate your own health status regularly and refrain from
 attending class and other on-campus events if you are ill. MSU students
 who miss class due to illness will be given opportunities to access
