Added final exam date and time

--- a/index.html
+++ b/index.html
@@ -1888,8 +1888,8 @@ complete the group exam individually.</strong></li>
 </div>
 <div id="individual-portion-1" class="section level4">
 <h4><em>Individual portion</em>:</h4>
-<p>Individual common hour final exam date and time will be
-<strong>published by the Registrar soon</strong>.</p>
+<p>Individual common hour final exam will be <strong>Tuesday, May 7th
+from 6:00 - 7:50 PM</strong>.</p>
 <ul>
 <li>The individual portion of the final exam will be worth 80% of your
 exam grade.</li>
