exam reflection and attendance policy

--- a/index.html
+++ b/index.html
@@ -1829,6 +1829,12 @@ released with the potential midterm exam questions).</li>
 <li>You will <strong>not</strong> be required to use Rstudio on the
 midterm exams.</li>
 </ul>
+<p>The Monday following each exam, we will have a 15-minute exam
+reflection. This will consist of questions from your exam which you will
+answer in your assigned groups. The exam reflections will count as 5% of
+your midterm exam grade. <strong>If a student misses more than 3 classes
+within a unit, they will be required to complete the exam reflection on
+their own.</strong></p>
 </div>
 <div id="final-exam-30" class="section level3">
 <h3>Final exam (30%)</h3>
