final exam date

--- a/index.html
+++ b/index.html
@@ -1866,9 +1866,8 @@ complete the group exam individually.</strong></li>
 </div>
 <div id="individual-portion" class="section level4">
 <h4><em>Individual portion</em>:</h4>
-<p>Individual common hour final exam will be <strong>TBD (set by the
-Registrar, be sure to check the Common Hour Final
-listings!)</strong>.</p>
+<p>Individual common hour final exam will be <strong>Tuesday, December
+10th from 6:00 to 7:50 pm</strong>.</p>
 <ul>
 <li>The individual portion of the final exam will be worth 80% of your
 final exam grade.</li>
