Change Rstudio to RStudio throughout

--- a/index.html
+++ b/index.html
@@ -1651,7 +1651,7 @@ to the RStudio server.</p>
 <ul>
 <li>Please note: Your netID password expires every 6 months. It is
 HIGHLY recommended that you reset your netID password BEFORE attempting
-to login to the Rstudio server. You can reset your netID password in the
+to login to the RStudio server. You can reset your netID password in the
 <a href="https://pwreset.montana.edu/react/">MSU password
 portal</a>.</li>
 </ul>
@@ -1789,10 +1789,10 @@ anyone can setup a WebEx meeting for class).</li>
 <div id="module-labs-10" class="section level3">
 <h3>Module Labs (10%)</h3>
 <p>After all topics within a module have been completed, you will meet
-with your classmates and instructor team to work through a Rstudio group
+with your classmates and instructor team to work through a RStudio group
 lab, which is provided in your coursepack and will be completed during
 class time. The lab will reinforce the topics learned in the activities
-but with the use of Rstudio for exploring and analyzing data.</p>
+but with the use of RStudio for exploring and analyzing data.</p>
 <ul>
 <li>Each group will turn in selected questions from the lab to
 Gradescope. Labs are due <strong>at 9 pm Mountain Time on dates
@@ -1833,7 +1833,7 @@ previously released potential exam questions for your exam.</li>
 <li>A formula sheet will be provided to use during the exam (also
 released with the potential midterm exam questions).</li>
 <li>You will be allowed a calculator on the midterm exams.</li>
-<li>You will <strong>not</strong> be required to use Rstudio on the
+<li>You will <strong>not</strong> be required to use RStudio on the
 midterm exams.</li>
 </ul>
 <p>The Monday following each exam, we will have a 15-minute exam
@@ -1865,7 +1865,7 @@ class time)</strong>.</p>
 exam grade.</li>
 <li>The group final exam is open book, open notes.</li>
 <li>You will be allowed a calculator on the group final exam.</li>
-<li>You <strong>will</strong> be required to use Rstudio on the group
+<li>You <strong>will</strong> be required to use RStudio on the group
 final exam.</li>
 <li><strong>If you miss more than 3 class days in Unit 3, you must
 complete the group exam individually.</strong></li>
@@ -1883,7 +1883,7 @@ final exam grade.</li>
 <li>You will be allowed to create a one page note sheet for the exam.
 You will also be provided a one page formula sheet during the exam.</li>
 <li>You will be allowed a calculator on the individual final exam.</li>
-<li>You will <strong>not</strong> be required to use Rstudio on the
+<li>You will <strong>not</strong> be required to use RStudio on the
 individual final exams.</li>
 <li>Understand that attending that common hour exam is part of your
 commitment when you enroll in the course.</li>
