Add Engagement to lab description

--- a/index.html
+++ b/index.html
@@ -1799,7 +1799,8 @@ Gradescope. Labs are due <strong>at 9 pm Mountain Time on dates
 indicated on the course calendar</strong>.</li>
 <li>The lowest lab grade will be dropped.</li>
 <li>Each student will also turn in each lab for completion at the
-<strong>beginning of the following class period</strong>.</li>
+<strong>beginning of the following class period</strong> for that class
+period’s Engagement grade.</li>
 </ul>
 </div>
 <div id="assignments-15" class="section level3">
