--- a/index.html
+++ b/index.html
@@ -1856,7 +1856,7 @@ individually.</strong></li>
 <div id="individual-portion" class="section level4">
 <h4><em>Individual portion</em>:</h4>
 <p>Individual midterm exams will be <strong>Friday February 14 and
-Friday March 26 (during normal class time)</strong>.</p>
+Friday March 28 (during normal class time)</strong>.</p>
 <ul>
 <li>The individual portion of the midterm exams will be worth 80% of
 your midterm exam grade.
@@ -1904,7 +1904,8 @@ complete the group final exam individually.</strong></li>
 </div>
 <div id="individual-portion-1" class="section level4">
 <h4><em>Individual portion</em>:</h4>
-<p>Individual common hour final exam will be <strong>TBD</strong>.</p>
+<p>Individual common hour final exam will be <strong>Tuesday, May 6th,
+from 12:00 - 1:50 pm</strong>.</p>
 <ul>
 <li>The individual portion of the final exam will be worth 80% of your
 final exam grade.</li>
