--- a/index.html
+++ b/index.html
@@ -2172,8 +2172,9 @@ Student Conduct.</p>
 <div id="AI" class="section level1">
 <h1>Policy on the use of AI language models</h1>
 <p>In this course, you may utilize generative AI language models,
-including ChatGPT, as a resource to support your work except during
-in-class exams. AI language models are powerful tools developed to
+including ChatGPT, as a resource to support your work outside of class
+(during class, you should seek assistance from group members or
+instructors). AI language models are powerful tools developed to
 generate text based on the input provided. <strong>While the AI language
 models can help refine your writing and coding, it is important to
 remember that it is an AI system and not a substitute for your critical
