Remove reference to reading guides in coursepack

--- a/index.html
+++ b/index.html
@@ -1629,8 +1629,8 @@ files to PDF format, sending and receiving e-mail, etc.).</p>
 <li><a href="https://mtstateintrostats.github.io/IntroStatTextbook/"><em>Montana
 State Introductory Statistics with R</em></a> — our free, online
 textbook</li>
-<li><em>STAT 216 Coursepack</em> — workbook with reading guides and
-in-class activities and labs</li>
+<li><em>STAT 216 Coursepack</em> — workbook with key topics, video
+notes, in-class activities, and labs</li>
 </ol>
 <p>The <em>Stat 216 Coursepack</em> of in-class activities is available
 for purchase in the <a href="https://www.msubookstore.org/">MSU
@@ -1747,7 +1747,7 @@ due on Mondays.</li>
 textbook reading, watch the assigned videos in D2L and take complete
 guided notes on the videos prior to class. Guided video notes are found
 in the coursepack and will be checked off at the start of class the
-first day of the new module. You will need to complete reading/video
+first day of the new module. You will need to complete video/reading
 quizzes, which are found on Gradescope and due by <strong>the start of
 class</strong>. Up until your class time, you can retake the
 video/reading quizzes as many times as you like by clicking Resubmit in
