edited for readability

--- a/index.html
+++ b/index.html
@@ -1999,6 +1999,10 @@ button to re-open a quiz.</li>
 <li>Extensions on these quizzes are not given unless extenuating
 circumstances are present which are communicated to the Student Success
 Coordinator, <a href="jade.schmidt2@montana.edu">Jade Schmidt</a>.</li>
+<li>For assignments, while the due dates are 9 pm on Mondays, you will
+be allowed to turn in work until 11:59 pm on the due date. Assignment
+submissions that are received between 9 pm and 11:59 pm will receive a
+5% grade deduction.</li>
 </ul></li>
 <li><strong>Exit Tickets and Labs</strong>:
 <ul>
@@ -2013,6 +2017,10 @@ not communicated prior to class time, are not given unless extenuating
 circumstances are present. Please email the Student Success Coordinator,
 <a href="jade.schmidt2@montana.edu">Jade Schmidt</a> if you feel your
 missed exit ticket or lab falls into this category.</li>
+<li>For labs, while the due dates are 9 pm on the day the lab is
+completed in class, you will be allowed to turn in work until 11:59 pm
+on the due date. Lab submissions that are received between 9 pm and
+11:59 pm will receive a 5% grade deduction.</li>
 </ul></li>
 <li><strong>Activities</strong>: Attendance in this course is critical
 for success and is therefore required. The in-class activity, exit
@@ -2043,11 +2051,6 @@ You may participate in the lab via video conferencing if desired or you
 may complete the lab on your own. If the latter, your section instructor
 will determine an appropriate extension on the lab based on your
 individual circumstances.</li>
-<li>For labs and assignments, while the due dates are 9 pm on the day
-the lab is completed in class and Mondays, respectively, you will be
-allowed to turn in work until 11:59 pm on the due date. Lab and
-assignment submissions that are received between 9 pm and 11:59 pm will
-receive a 5% grade deduction.</li>
 </ul></li>
 <li><strong>Exams</strong>:
 <ul>
