edited for readability

--- a/index.html
+++ b/index.html
@@ -2006,12 +2006,16 @@ submissions that are received between 9 pm and 11:59 pm will receive a
 </ul></li>
 <li><strong>Exit Tickets and Labs</strong>:
 <ul>
-<li>You may take the exit tickets and Labs in Gradescope as many times
+<li>You may take the exit tickets and labs in Gradescope as many times
 as you like up until the due date using the Resubmit button to re-open
-an assessment</li>
+an assessment.</li>
 <li>If you miss class and email your section instructor about your
 absence <strong>prior to class time</strong>, you will be given a
 24-hour extension to complete the exit ticket or lab.</li>
+<li>If possible, it is highly recommended to attend class virtually (via
+video conferencing with your group) to complete the lab or exit ticket
+with your team.<br />
+</li>
 <li>Further extensions on exit tickets or labs, or when an absence is
 not communicated prior to class time, are not given unless extenuating
 circumstances are present. Please email the Student Success Coordinator,
@@ -2044,13 +2048,6 @@ teammates. If the student is uncomfortable asking, the instructor can
 facilitate that conversation (e.g., email the students’ teammates,
 cc’ing the student, and ask if anyone can setup a WebEx meeting for
 class).</li>
-<li>If you need to miss a lab due to illness, quarantine, or other
-extenuating circumstances, please email your section instructor and
-group-mates letting them know <strong>prior to the lab meeting</strong>.
-You may participate in the lab via video conferencing if desired or you
-may complete the lab on your own. If the latter, your section instructor
-will determine an appropriate extension on the lab based on your
-individual circumstances.</li>
 </ul></li>
 <li><strong>Exams</strong>:
 <ul>
