--- a/index.html
+++ b/index.html
@@ -2041,7 +2041,7 @@ talk to their instructor.
 <ul>
 <li>For illnesses or when students cannot attend class, we recommend
 that the student video conference into class with their group
-(preferrably using WebEx or Zoom). Students attending class remotely can
+(preferably using WebEx or Zoom). Students attending class remotely can
 show their activity and participate in the exit ticket over video
 conference for credit. Video conferencing should be set up by students’
 teammates. If the student is uncomfortable asking, the instructor can
