--- a/index.html
+++ b/index.html
@@ -1485,14 +1485,15 @@ border-radius: 0px;
 </div>
 
 
-<div id="instructor-contact-information" class="section level1 tabset tabset-fade">
-<h1 class="tabset tabset-fade">Instructor contact information</h1>
+<div id="course-supervisors-contact-information" class="section level1 tabset tabset-fade">
+<h1 class="tabset tabset-fade">Course Supervisors Contact
+Information</h1>
 <p>Your primary contact in STAT 216 is your instructor. If you have
 concerns that cannot be answered by your instructor, you may reach out
 to the Student Success Coordinator or the Course Supervisor.</p>
 <p>Refer to your section’s <strong>Instructor Contact Information under
-Canvas Content</strong> for your instructor and co-instructor/TA contact
-information.</p>
+Canvas Modules –&gt; Section X</strong> for your instructor and
+co-instructor/TA contact information.</p>
 <div id="student-success-coordinator" class="section level2">
 <h2>Student Success Coordinator</h2>
 <p><a href="http://www.math.montana.edu/directory/faculty/1524571/jade-schmidt" target="_blank"><strong>Jade Schmidt</strong></a><br />
@@ -1515,6 +1516,68 @@ email: <a href="mailto:greenwood@montana.edu" class="email">greenwood@montana.ed
 Office: Wilson 2-228<br />
 Phone: (406) 994-1962</p>
 <hr />
+</div>
+</div>
+<div id="instructor-contact-information" class="section level1 tabset tabset-fade">
+<h1 class="tabset tabset-fade">Instructor contact information</h1>
+<p>Your primary contact in STAT 216 is your instructor.</p>
+<hr />
+<div id="section-instructors" class="section level2">
+<h2>Section Instructors</h2>
+<p>The list of instructors for each section/time/location is listed
+below. Click on the tab to find the contact information for your section
+instructor.</p>
+<p>Section 001 (8 am in Romney 211): Jeremiah Pharr</p>
+<p>Section 002 (9 am in Romney 211): Jade Schmidt</p>
+<p>Section 003 (10 am in Romney 211): Jade Schmidt</p>
+<p>Section 004 (11 am in Romney 211): Madison Alderman</p>
+<p>Section 005 (12 pm in Romney 211): Jeremiah Pharr</p>
+<p>Section 006 (1:10 pm in Romney 211): Melinda Yager</p>
+<p>Section 007 (2:10 pm in <strong>Romney 211</strong>): Esther
+Birch</p>
+<p>Section 011 (2:10 pm in <strong>Wilson 1-119</strong>): Jeremiah
+Pharr</p>
+<p>Section 008 (3:10 pm in <strong>Romney 211</strong>): Esther
+Birch</p>
+<p>Section 012 (3:10 pm in <strong>Wilson 1-119</strong>): Jeremiah
+Pharr</p>
+<p>Section 009 (4:10 pm in Romney 211*): Madison Alderman</p>
+<p>Section 010 (5:10 pm in Romney 211): Madison Alderman</p>
+<hr />
+</div>
+<div id="madison-alderman" class="section level2">
+<h2>Madison Alderman</h2>
+<p><strong>Madison Alderman</strong></p>
+<p>email: <a href="mailto:madisonalderman1@montana.edu" class="email">madisonalderman1@montana.edu</a></p>
+<p>office:</p>
+<hr />
+</div>
+<div id="esther-birch" class="section level2">
+<h2>Esther Birch</h2>
+<p><strong>Esther Birch</strong></p>
+<p>email: <a href="mailto:estherbirch@montana.edu" class="email">estherbirch@montana.edu</a></p>
+<p>office: Wilson 1-112</p>
+<hr />
+</div>
+<div id="jeremiah-pharr" class="section level2">
+<h2>Jeremiah Pharr</h2>
+<p><strong>Jeremiah Pharr</strong></p>
+<p>email: <a href="mailto:jeremiahpharr@montana.edu" class="email">jeremiahpharr@montana.edu</a></p>
+<p>office: Wilson 1-112</p>
+<hr />
+</div>
+<div id="jade-schmidt" class="section level2">
+<h2>Jade Schmidt</h2>
+<p><strong>Jade Schmidt</strong></p>
+<p>email: <a href="mailto:jade.schmidt2@montana.edu" class="email">jade.schmidt2@montana.edu</a></p>
+<p>office: Wilson 2-263</p>
+<hr />
+</div>
+<div id="melinda-yager" class="section level2">
+<h2>Melinda Yager</h2>
+<p><strong>Melinda Yager</strong></p>
+<p>email: <a href="mailto:melinda.yager@montana.edu" class="email">melinda.yager@montana.edu</a></p>
+<p>office: Wilson 2-260</p>
 </div>
 </div>
 <div id="course-calendars" class="section level1">
