--- a/index.html
+++ b/index.html
@@ -1489,11 +1489,13 @@ border-radius: 0px;
 <h1 class="tabset tabset-fade">Course Supervisors Contact
 Information</h1>
 <p>Your primary contact in STAT 216 is your instructor. If you have
-concerns that cannot be answered by your instructor, you may reach out
-to the Student Success Coordinator or the Course Supervisor.</p>
+concerns that cannot be answered by your instructor, or have exam
+conflicts, you may reach out to the Student Success Coordinators or the
+Course Supervisor.</p>
 <p>Refer to your section’s <strong>Instructor Contact Information under
-Canvas Modules –&gt; Section X</strong> for your instructor and
-co-instructor/TA contact information.</p>
+Canvas Modules –&gt; Section X Information and Notes</strong> for your
+instructor and co-instructor/TA contact information and office
+hours.</p>
 <div id="student-success-coordinator" class="section level2">
 <h2>Student Success Coordinator</h2>
 <p><a href="http://www.math.montana.edu/directory/faculty/1524571/jade-schmidt" target="_blank"><strong>Jade Schmidt</strong></a><br />
@@ -1519,8 +1521,9 @@ Phone: (406) 994-1962</p>
 </div>
 </div>
 <div id="instructor-contact-information" class="section level1 tabset tabset-fade">
-<h1 class="tabset tabset-fade">Instructor contact information</h1>
-<p>Your primary contact in STAT 216 is your instructor.</p>
+<h1 class="tabset tabset-fade">Instructor Contact Information</h1>
+<p>Your primary contact in STAT 216 is your section instructor. Please
+contact your instructor for absences or other day-to-day questions.</p>
 <hr />
 <div id="section-instructors" class="section level2">
 <h2>Section Instructors</h2>
