update activities and exit ticket policies

--- a/index.html
+++ b/index.html
@@ -1552,7 +1552,7 @@ Pharr</p>
 <h2>Madison Alderman</h2>
 <p><strong>Madison Alderman</strong></p>
 <p>email: <a href="mailto:madisonalderman1@montana.edu" class="email">madisonalderman1@montana.edu</a></p>
-<p>office:</p>
+<p>office: Wilson 1-112</p>
 <hr />
 </div>
 <div id="esther-birch" class="section level2">
@@ -1851,12 +1851,12 @@ If the student is uncomfortable asking, the instructor can facilitate
 that conversation (e.g., email the students’ teammates, cc’ing the
 student, and ask if anyone can setup a WebEx meeting for class).</li>
 <li>Students who are unable to attend class remotely AND e-mail their
-instructor <strong>prior to class time</strong> regarding an absence
-will receive a 0 for the class activity check but will be allowed a
-24-hour extension to complete the exit ticket.</li>
+instructor <strong>the day of the missed class</strong> regarding an
+absence will be allowed a 24-hour extension to complete the exit
+ticket.</li>
 </ul></li>
-<li>The three (3) lowest activity/lab completion check grades and the
-lowest (1) exit ticket grade EACH unit will be dropped.</li>
+<li>The three (3) lowest exit ticket grades EACH unit will be
+dropped.</li>
 </ul>
 </div>
 <div id="module-labs-15" class="section level3">
@@ -2047,24 +2047,20 @@ semester based on student performance (never upward).</p>
 <h1>Late work policies</h1>
 <p>Note: we <strong>highly</strong> recommend saving your answers for
 each question while you complete all work in Gradescope. This will
-ensure you can return to labs, video/reading quizzes, exit tickets, or
-assignments at a later date without fear of losing any progress.
-Additionally, Gradescope will automatically submit any saved work when
-the due date passes, ensuring you earn up to full credit for all
-problems completed on time.</p>
+ensure you can return to labs, exit tickets, or assignments at a later
+date without fear of losing any progress. Additionally, Gradescope will
+automatically submit any saved work when the due date passes, ensuring
+you earn up to full credit for all problems completed on time.</p>
 <ul>
-<li><strong>Video/Reading Quizzes and Assignments</strong>:
+<li><strong>Assignments</strong>:
 <ul>
-<li>You may take the video/reading quizzes or assignments in Gradescope
-as many times as you like up until the due date using the Resubmit
-button to re-open a quiz.</li>
-<li>Extensions on these quizzes are not given unless extenuating
-circumstances are present which are communicated to the Student Success
-Coordinator, <a href="jade.schmidt2@montana.edu">Jade Schmidt</a>.</li>
 <li>For assignments, while the due dates are 9 pm on Mondays, you will
 be allowed to turn in work until 11:59 pm on the due date. Assignment
 submissions that are received between 9 pm and 11:59 pm will receive a
-5% grade deduction.</li>
+5% grade deduction. Extensions on assignments are not given unless
+extenuating circumstances are present which are communicated to the
+Student Success Coordinator, <a href="jade.schmidt2@montana.edu">Jade
+Schmidt</a>.</li>
 </ul></li>
 <li><strong>Exit Tickets and Labs</strong>:
 <ul>
@@ -2072,7 +2068,7 @@ submissions that are received between 9 pm and 11:59 pm will receive a
 as you like up until the due date using the Resubmit button to re-open
 an assessment.</li>
 <li>If you miss class and email your section instructor about your
-absence <strong>prior to class time</strong>, you will be given a
+absence <strong>the day class is missed</strong>, you will be given a
 24-hour extension to complete the exit ticket or lab.</li>
 <li>If possible, it is highly recommended to attend class virtually (via
 video conferencing with your group) to complete the lab or exit ticket
@@ -2088,29 +2084,10 @@ completed in class, you will be allowed to turn in work until 11:59 pm
 on the due date. Lab submissions that are received between 9 pm and
 11:59 pm will receive a 5% grade deduction.</li>
 </ul></li>
-<li><strong>Activities</strong>: Attendance in this course is critical
-for success and is therefore required. The in-class activity, exit
-tickets, and lab grades are a proxy for attendance and engagement.
-Students are expected to be in class during in-class activities and labs
-to provide support to each other and their teammates while working
-through the material. We will not record or post lectures/asynchronous
-learning opportunities. Students get a “free pass” for up to three class
-days per Unit, no questions asked, but are requested to communicate with
-their section instructor anytime they miss class.
-Illnesses/emergencies/school-related absences are included in these
-three; if students have extraneous circumstances, they are encouraged to
-talk to their instructor.
+</ul>
+<!-- * **Activities**: Attendance in this course is critical for success and is therefore required. The in-class activity, exit tickets, and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. We will not record or post lectures/asynchronous learning opportunities. Students get a “free pass” for up to three class days per Unit, no questions asked, but are requested to communicate with their section instructor anytime they miss class. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor.  -->
+<!--     - For illnesses or when students cannot attend class, we recommend that the student video conference into class with their group (preferably using WebEx or Zoom). Students attending class remotely can show their activity and participate in the exit ticket over video conference for credit. Video conferencing should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class).  -->
 <ul>
-<li>For illnesses or when students cannot attend class, we recommend
-that the student video conference into class with their group
-(preferably using WebEx or Zoom). Students attending class remotely can
-show their activity and participate in the exit ticket over video
-conference for credit. Video conferencing should be set up by students’
-teammates. If the student is uncomfortable asking, the instructor can
-facilitate that conversation (e.g., email the students’ teammates,
-cc’ing the student, and ask if anyone can setup a WebEx meeting for
-class).</li>
-</ul></li>
 <li><strong>Exams</strong>:
 <ul>
 <li>Students that are in quarantine but healthy enough to take the exam
