attendance policy updates

--- a/index.html
+++ b/index.html
@@ -1819,27 +1819,24 @@ indicates your answer was correct.</li>
 <div id="engagement-10" class="section level3">
 <h3>Engagement (10%)</h3>
 <p>Every class day, you will meet with your classmates and instructor
-team to work through that day’s coursepack group activity. Attendance
-and completion of the in-class activities and exit tickets (reviewing
-select questions from the activity) counts towards this portion of your
-grade.</p>
+team to work through that day’s coursepack group activity. Exit tickets
+(reviewing select questions from the activity) grades make up this
+portion of your grade.</p>
 <ul>
 <li>Activities must be completed in the Stat 216 Coursepack. <strong>If
 you prefer to complete the activity on a pdf copy using a stylus-enabled
 device, please speak to your instructor, and he or she will provide you
 with a PDF copy of the coursepack.</strong></li>
 <li>As a group, you will submit an ‘exit ticket’ (answers to select
-questions from the activity) to <strong>Gradescope at the end of each
+question(s) from the activity) to <strong>Gradescope at the end of each
 class period</strong>.</li>
-<li>Activities will be checked for completion at the <strong>beginning
-of the following class period</strong>.</li>
-<li>Policy for missed activities:
+<li>Policy for missed activities/exit tickets:
 <ul>
 <li>We will not record or post lectures/asynchronous learning
 opportunities.</li>
-<li>Students get a “free pass” for up to three activities per Unit, no
-questions asked, <em>but students are expected to communicate any
-absences with their section instructor</em>.
+<li>Students get a “free pass” for up to three activities/exit tickets
+per Unit, no questions asked, <em>but students are expected to
+communicate any absences with their section instructor</em>.
 Illnesses/emergencies/school-related absences are included in these
 three; if students have extraneous circumstances, they are encouraged to
 talk to their instructor.</li>
